# pulsar-m12

./: Makefile  README  configure.in
doc/: CHANGES  COMPATIBILITY  INSTALL  Makefile.in  SUPPORT  TODO
doc/rfcs/: rfc1082.txt  rfc2449.txt
doc/techdoc/: cache_file_specification
man/: Makefile.in  maildir.5.man  mbox.5.man  pulsar.8.man  pulsar.conf.5.man  pulsar_crypt.1.man  pulsar_deliver.8.man
patches/postfix-20010228-pl05/: transport_allow_root_delivery.diff
src/: Makefile.in  config.h.in  error_facility.c  error_facility.h  pulsar.c  pulsar.h  pulsar_apop.c  pulsar_badcmd.c  pulsar_capa.c  pulsar_crypt.c  pulsar_dele.c  pulsar_deliver.c  pulsar_list.c  pulsar_main.c  pulsar_misc.c  pulsar_noop.c  pulsar_pass.c  pulsar_quit.c  pulsar_retr.c  pulsar_rset.c  pulsar_stat.c  pulsar_stls.c  pulsar_top.c  pulsar_uidl.c  pulsar_user.c  version.h.in
src/cfg/: Makefile.in  cfg.c  cfg.h  cfg_auth_cmd.c  cfg_auth_cmd.h  cfg_auth_db.c  cfg_auth_db.h  cfg_certificate.c  cfg_certificate.h  cfg_debug.c  cfg_debug.h  cfg_inetd.c  cfg_inetd.h  cfg_listen_on.c  cfg_listen_on.h  cfg_mailspool.c  cfg_mailspool.h  cfg_mailspool_owner.c  cfg_mailspool_owner.h  cfg_mbox_cache.c  cfg_mbox_cache.h  cfg_mbox_sqlite.c  cfg_mbox_sqlite.h  cfg_mysql_and.c  cfg_mysql_and.h  cfg_mysql_db.c  cfg_mysql_db.h  cfg_mysql_gid.c  cfg_mysql_gid.h  cfg_mysql_homedir.c  cfg_mysql_homedir.h  cfg_mysql_host.c  cfg_mysql_host.h  cfg_mysql_pass.c  cfg_mysql_pass.h  cfg_mysql_pass_column.c  cfg_mysql_pass_column.h  cfg_mysql_table.c  cfg_mysql_table.h  cfg_mysql_uid.c  (+11 more)
src/mailstore/: Makefile.in  mailbox.c  mailbox.h  maildir.c  maildir.h  mailstore.c  mailstore.h  mbox_ll.c  sqlite_mailbox.c  sqlite_mailbox.h
src/md5/: Makefile.in  md5.c
src/users/: Makefile.in  users.c  users.h  users_file.c  users_file.h  users_mysql.c  users_mysql.h  users_pam.c  users_pam.h  users_unix.c  users_unix.h
src/util/: Makefile.in  net_io.c  safe_alloc.c  safe_io.c  util.h
support_files/: Makefile.in  mbox_obf.pl  pulsar.conf  pulsar.epm.in  pulsar.init.in  pulsar.pamd  pulsar.xinetd.in
